http_server/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpservertest
          image: 18981850753/httpservertest:1.0
          readinessProbe:
            httpGet: 
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
